<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ValidationCpfActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="28dp"
        android:text="@string/validador_de_cpf"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/cpf"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/grey"
        app:counterTextColor="@android:color/holo_red_light"
        app:helperText="@string/digite"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputCpf"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:inputType="number"
            android:maxLength="14"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textCounterNumberCpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="-15dp"
        android:text="0/11"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/inputCpf"
        app:layout_constraintTop_toBottomOf="@+id/inputCpf" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonValidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="46dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/validar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
